# DynamicStabilization

./: CMakeLists.txt  README.md
evaluation/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  Color.cpp  Color.hpp  Commons.cpp  Commons.hpp  EvaluateExpectableError.cpp  EvaluateObjectTracking.cpp  EvaluateOpticalFlow.cpp  EvaluateStaticCalibration.cpp  ObjectTracking.cpp  ObjectTracking.hpp  OpticalFlow.cpp  OpticalFlow.hpp  VisualizeBackgroundSegmentation.cpp  VisualizeFeatureDetection.cpp  VisualizeFeatureMatching.cpp  evaluation.md
include/DynamicStabilization/: FastFREAKBFDynamicStabilization.hpp  TimeMeasurable.hpp
include/DynamicStabilization/detection/: FastFREAKFeatureDetection.hpp  ORBFeatureDetection.hpp  SURFFeatureDetection.hpp
include/DynamicStabilization/matching/: BruteForceFeatureMatching.hpp  FeatureMatchingBase.hpp  FlannFeatureMatching.hpp
include/DynamicStabilization/segmentation/: BackgroundSegmentionBase.hpp
include/DynamicStabilization/stabilization/: CMakeLists.txt  DynamicStabilizationBase.hpp  ORBBFDynamicStabilization.hpp  SURFBFDynamicStabilization.hpp
include/DynamicStabilization/stabilization/detection/: FeatureDetectionBase.hpp  SIFTFeatureDetection.hpp  StarBRIEFFeatureDetection.hpp
include/DynamicStabilization/stabilization/matching/: FeatureMatchingBase.hpp
include/DynamicStabilization/stabilization/segmentation/: BackgroundSegmentionBase.hpp  MOG2BackgroundSegmentation.hpp
include/DynamicStabilization/stabilization/warping/: FrameWarping.hpp
lib/: CMakeLists.txt
lib/calibration/: CMakeLists.txt  CameraPoseEstimation.cpp  CameraPoseEstimation.hpp
lib/calibration/camera/: RenderingPipeline.cpp  RenderingPipeline.hpp
lib/calibration/objects/: ObjectsLoading.cpp  ObjectsLoading.hpp  ParametricPoint.cpp  ParametricPoint.hpp  WorldObject.cpp  WorldObject.hpp  YAMLExtension.cpp
lib/calibration/residuals/: CorrespondenceResidual.cpp  CorrespondenceResidual.hpp  DistanceFromIntervalResidual.cpp  DistanceFromIntervalResidual.hpp  DistanceResidual.cpp  DistanceResidual.hpp
lib/stabilization/: CMakeLists.txt  DynamicStabilizationBase.cpp  DynamicStabilizationBase.hpp  FastFREAKBFDynamicStabilization.cpp  FastFREAKBFDynamicStabilization.hpp  ORBBFDynamicStabilization.cpp  ORBBFDynamicStabilization.hpp  SURFBFDynamicStabilization.cpp  SURFBFDynamicStabilization.hpp  TimeMeasurable.cpp  TimeMeasurable.hpp
lib/stabilization/detection/: FastFREAKFeatureDetection.cpp  FastFREAKFeatureDetection.hpp  FeatureDetectionBase.cpp  FeatureDetectionBase.hpp  ORBFeatureDetection.cpp  ORBFeatureDetection.hpp  SIFTFeatureDetection.cpp  SIFTFeatureDetection.hpp  SURFFeatureDetection.cpp  SURFFeatureDetection.hpp  StarBRIEFFeatureDetection.cpp  StarBRIEFFeatureDetection.hpp
lib/stabilization/matching/: BruteForceFeatureMatching.cpp  BruteForceFeatureMatching.hpp  FeatureMatchingBase.cpp  FeatureMatchingBase.hpp  FlannFeatureMatching.cpp  FlannFeatureMatching.hpp
lib/stabilization/segmentation/: BackgroundSegmentionBase.cpp  BackgroundSegmentionBase.hpp  MOG2BackgroundSegmentation.cpp  MOG2BackgroundSegmentation.hpp
lib/stabilization/warping/: FrameWarping.cpp  FrameWarping.hpp
misc/: CMakeLists.txt
src/: CMakeLists.txt  DynamicStabilizationBase.cpp  FastFREAKBFDynamicStabilization.cpp  ORBBFDynamicStabilization.cpp  SURFBFDynamicStabilization.cpp  TimeMeasurable.cpp
src/detection/: FastFREAKFeatureDetection.cpp  FeatureDetectionBase.cpp  ORBFeatureDetection.cpp  SIFTFeatureDetection.cpp  SURFFeatureDetection.cpp  StarBRIEFFeatureDetection.cpp
src/matching/: BruteForceFeatureMatching.cpp  FeatureMatchingBase.cpp  FlannFeatureMatching.cpp
src/segmentation/: BackgroundSegmentionBase.cpp  MOG2BackgroundSegmentation.cpp
src/warping/: FrameWarping.cpp
test/: BackgroundSegmentationTests.cpp  CMakeLists.txt  CameraPoseEstimationTests.cpp  CameraTestBase.cpp  CameraTestBase.hpp  DynamicStabilizationTests.cpp  FeatureDetectorTests.cpp  FeatureMatcherTests.cpp  ImageTestBase.cpp  ImageTestBase.hpp  ObjectsLoadingTests.cpp  RenderingPipelineTests.cpp  ResidualsTests.cpp
